Se agrega nuevamente la tarea debido a los prooblemas ya solucionados,en esta modificacion, debido al .gitignore

--- a/Angie_segundo_intento.ipynb
+++ b/Angie_segundo_intento.ipynb
@@ -6,15 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Angie import Angie\n",
-    "from cuadrado import cuadrado\n",
-    "    \n",
-    "\n"
+    "from Angie_segundo import Angie\n",
+    "from Angie_segundo import cuadrado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +38,7 @@
        "16"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,13 +46,6 @@
    "source": [
     "cuadrado(4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
